Unit test for FifaRankDAO

--- a/build.gradle
+++ b/build.gradle
@@ -43,5 +43,8 @@ dependencies {
     //Google Cloud Platform
     compile 'com.google.cloud:google-cloud-bigquery:1.26.0'
     compile 'com.google.cloud:google-cloud-storage:1.28.0'
+
+    //Other tools
+    compile 'org.apache.commons:commons-csv:1.5'
 }
 
